# Igloo-Content-planner

./: AGENTS.md  PLANS.md  README.md  __init__.py  __main__.py  builder-launch.err.txt  cli.py  models.py  pyproject.toml  requirements.txt  source_index.json
builder/: content_search.py  draft_builder.py  models.py  query_planner.py  sample_catalog.py  session_package.py  session_parser.py  ui_server.py
capability/: __init__.py  build_approach.py  classifier.py  confidence.py  decision_log.py  evaluation.py  reporting.py
config/: __init__.py  settings.py  source_manifest.json
docs/: case_study_use_case_priors.md  final_phase1_reasoning_model.md  phase1_calibration_update.md  phase2_builder_research_note.md  phase2_mixed_media_ui_direction.md  pilot_evaluation.md  pilot_metrics.md  session_setup_archetypes.md  source_inventory.md  support-policy.md  taxonomy.md
igloo_experience_builder_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ingestion/: __init__.py  common.py  pdf_docs.py  platform_docs.py  runtime_api.py  source_manager.py
knowledge/: __init__.py  index_store.py  retriever.py  taxonomy.py  text_utils.py
local/: README.md  __init__.py  install_discovery.py
policy/: __init__.py  support_policy.py
prompts/: README.md
reports/: last_report.md  report-2026-04-03T23-29-17+00-00.md  report-2026-04-03T23-30-18+00-00.md  report-2026-04-03T23-31-00+00-00.md  report-2026-04-03T23-31-31+00-00.md  report-2026-04-03T23-32-05+00-00.md  report-2026-04-03T23-32-35+00-00.md  report-2026-04-03T23-33-13+00-00.md  (+75 more)
(+85 files in other folders)
