[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igloo-experience-builder-pilot"
version = "0.1.0"
description = "Phase 1 Experience Feasibility Copilot for the Igloo Experience Builder Pilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=5.4.0,<6",
  "python-socketio[client]>=5.11.4,<6",
]

[project.scripts]
igloo-experience-builder = "igloo_experience_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
